--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="btns">
           <button class="generate-btn">Generate Password</button>
           <button class="generate-btn" id="hist">
-            <img src="/icons8_ghost.ico" alt="" />
+            <img src="icons8_ghost.ico" alt="" />
           </button>
         </div>
       </div>
